test/end-to-end/compile-errors/duplicate-declaration.crow
main void()
	()

foo record
	a nat
	a nat

foo union
	b
	b nat

foo enum
	c
	c

foo flags
	d
	d

s spec
s spec

f nat(a nat, a nat)
	a

f nat()
	a nat = 1
	a nat = 2
	a

f nat(a nat)
	a nat = 1
	a

f nat()
	1 call a =>
		a nat = 1
		a

f nat()
	1 call a =>
		b nat = 1
		1 call b =>
			a nat = 2
			b

f nat()
	1 call a =>
		1 call a =>
			a

call nat(_ nat, f nat data(x nat))
	f[0]
